@@ -1742,8 +1742,15 @@ dwWriteLineNumber (dwline * lp)
       /* encode this the long way.                                */
       if (!usedSpecial)
         {
+#if 0 // Fails to assemble for initializations of local static variables. TODO: Use this, when possible, as DW_LNS_fixed_advance_pc is much shorter than DW_LNE_set_address below.
           dwWriteByte (NULL, DW_LNS_fixed_advance_pc, NULL);
           dwWriteHalfDelta (lp->label, curLabel, lp->offset-curOffset);
+#else // Todo: This was implemented to make initializations of local static variables compile, but stepping through those initializations in gdb reports "Cannot find bounds of current function".
+          dwWriteByte (NULL, 0, NULL);
+          dwWriteULEB128 (NULL, 1+port->debugger.dwarf.addressSize, NULL);
+          dwWriteByte (NULL, DW_LNE_set_address, NULL);
+          dwWriteAddress (lp->label, lp->offset, NULL);
+#endif
           curLabel = lp->label;
           curOffset = lp->offset;
         
