@@ -1,3 +1,8 @@
+2023-04-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCdwarf2.c:
+	  Fix bug #3576.
+
 2023-04-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/asz80/z80mch.c:
